--- a/Content/TempoPlayer/tour.tex
+++ b/Content/TempoPlayer/tour.tex
@@ -13,7 +13,9 @@ The \textit{BPM} represent the song's ``Beats Per Minute''. This information is 
 
 The Android device should be mounted on the user's arm and when the next button is pressed the BPM of the next songs played will match the user's SPM with an allowed deviation of 45 BPM.
 
-When the user stands still and the SPM is 0, all songs in the library will be available in a shuffled order.\Ivan{"When the user stands still and the SPM is 0..." skal lige forklares lidt bedre. Eksakt 0 eller? Hvordan definerer vi vores stand ``still window?''}
+When the user stands still for more than 2 seconds, the SPM are set to 0, since no steps are taken. See \Cref{sec:stepCnt} for details. 
+
+We have chosen that all songs in the library will be  available to the user in a shuffled order.
 
 As shown in \Cref{fig:settings}, the user can adjust some settings of the application. Currently, the only adjustment the user can make is in which directory the application looks for songs. This settings screen is shown in \Cref{fig:settingsPath}. 
 
