fixed title todo in music player chapter

--- a/Report.tex
+++ b/Report.tex
@@ -30,7 +30,7 @@
 \label{chap:tempoPlayer}
 \input{Content/TempoPlayer/tempoPlayer}
 
-\chapter{Music Player}
+\chapter{The Music Player Module}
 \label{chap:musicPlayer}
 \input{Content/MusicPlayer/musicPlayer}
 
