--- a/Content/StepCounter/implementation.tex
+++ b/Content/StepCounter/implementation.tex
@@ -6,7 +6,7 @@ According to \citet[p. 2]{zhao:pedometer} a step has occurred if there is a nega
 
 As \citet[p. 2]{zhao:pedometer} we assume that a person can either run as fast as five steps per second or walk as slowly as one step every two seconds. This is handled in the implementation by checking the time since the last measurement. If less than 200 milliseconds have passed since the last step, a new step is not detected. If more than 2 seconds have passed the SPM array is updated with a 0 to indicate that the person is not moving (0 steps per minute).
 
-Our implementation utilises an sensitivity threshold so measurements which are very close to each other are not detected as a new step, even though they fulfill the requirements mentioned earlier. This is done to filter out small deviations in measurements which might falsely be identified as a new step.\Ivan{beskriv evt. konkrete (tærskel?)værdier brugt}
+Our implementation utilises an sensitivity limit so measurements which are very close to each other are not detected as a new step, even though they fulfill the requirements mentioned earlier. This is done to filter out small deviations in measurements which might falsely be identified as a new step. The current limit value is 2, and was found experimentally.
 \begin{figure}[h!]
   \centering
     \includegraphics[scale=0.8]{Images/accPlot.png}
@@ -16,7 +16,7 @@ Our implementation utilises an sensitivity threshold so measurements which are v
 \subsection{Calculation of Steps Per Minute}
 The number of steps taken are used to calculate the number of steps the user takes per minute (SPM).\\
 
-First, a vector\Ivan{Vector er ikke en vektor - evt. amplitude i stedet. Måske tage tid med i beskrivelsen også.} is calculated which represents the x, y, z values obtained from the accelerometer. The formula used for this is $$vector = \sqrt{x^{2} + y^{2} + z^{2}}$$\\
+First, the amplitude is calculated which represents the change x, y, z values obtained from the accelerometer. The formula used for this is $$amplitude = \sqrt{x^{2} + y^{2} + z^{2}}$$\\
 
 The array containing accelerometer measurement data is then updated with the newly calculated value. The data in this array is used for determining whether a step is taken or not, the implementation of which is described in \Cref{sec:stepCnt}.\\
 
