added intro file

--- a/Content/TactileInterface/tactileInterface.tex
+++ b/Content/TactileInterface/tactileInterface.tex
@@ -1,3 +1,4 @@
+\input{Content/TactileInterface/intro}
 \input{Content/TactileInterface/useCases}
 \input{Content/TactileInterface/implementation}
 \input{Content/TactileInterface/methodologyObservations}
