Added todo for introduction.

--- a/Content/Introduction/introduction.tex
+++ b/Content/Introduction/introduction.tex
@@ -39,3 +39,5 @@ Based on this knowledge the third problem can be stated:
 \begin{center}
 	\textit{How do we select and implement a structured systems development methodology?}
 \end{center}
+
+\Alexander{Read last problem and compare current version vs previous.}
