Restructed XP Explained ... again

--- a/Content/Methodology/XPexplained.tex
+++ b/Content/Methodology/XPexplained.tex
@@ -14,55 +14,16 @@ Extreme Programming is supposed to be a lightweight, efficient, and fun approach
 \end{tabularx}
 
 Some of these practices are more coherent than others. 
-While some enforces each other, others may be unrelated. (i.e. coding standards enforces collective ownership, but on-site customer and testing are unrelated.)
-The correlations can be split into the three categories, Programming, Team Practice, Process.
-
-\subsection{Programming}
-The programming category is for the practices directly involved with the coding.
-In this category are the practices: Coding Standards, Refactoring, Simple Design, and Testing.
-
-\paragraph{The testing practice} covers both user tests and test-first development.
-This means that before writing any code, a unit test specifying the functionality is written.
-This does also apply when expanding existing code, meaning before writing the additional code, a unit test is written.
-
-\paragraph{Coding Standards} are important in programming as well as on a team level.
-Coding standards at the programming level are used to, quickly letting anyone read code written by others.
-Hence making it faster to implement additional features to existing code.
-
-\paragraph{Simple Design} 
-
-\paragraph{Refactoring} is used when the method 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+While some enforces each other, others may be unrelated. (i.e. coding standards enforces collective ownership, but on-site customer and pair programming are unrelated.)
 
 \subsection{40-hour Week}
+This practice is created to ensure the developers are well rested and fresh when they come in to work.
+Although this practice is called 40-hour Week, it should not necessarily be specified to 40-hour per week.
+The correct week length will depend on the specific team.
+
+This practice is basis for many of the other practices, as one needs to be well rested to think straight and be creative.
+On the other hand, for this practice to work it is required that there are enough tasks to solve.
+These tasks are created through the Planning Game practice, hence making it a prerequisite for the 40-hour Week practice to work. 
 
 \subsection{Coding Standards}
 
