fixed todo in musicplayer

--- a/Content/MusicPlayer/useCases.tex
+++ b/Content/MusicPlayer/useCases.tex
@@ -27,12 +27,11 @@ It should also be possible to seek in the playing song.}
 \item The music keeps playing after the \texttt{Power} button is pressed.
 \end{itemize}}
 
-\story{Adjust music speed.}{Low}
+\story{Adjust music speed.}{High}
 {As a user, I, want the music to match my pace even when the playing song's tempo is not exactly my pace.}
 {\begin{itemize}
 \item The application must be able to match my pace with appropriate songs, when the smartphone is held in either the hand, the pocket, or on the arm.
 \end{itemize}}
-\Dan{``Adjust music speed'' should either have a higher priority or there should be one specifically for finding appropriate songs.}
 %\story{Title}{Priority}{Story}{Acceptance Criteria}
 %This section should describe the use cases set up for the Music Player feature.
 
