work in progress interations

--- a/Content/Iteration/1stIteration.tex
+++ b/Content/Iteration/1stIteration.tex
@@ -1,6 +1,14 @@
 \section{1st Iteration}
-This section should contain the configuration table and description for the 1st release.
+The goal for the 1st release was to create a music player on the android smartphone platform that should be usable while running. 
 
-Further it should contain iteration goal, to see the progress throughout the project.
+\Kristian{consider if we should have use cases here.}
 
-Lastly it should contain the findings in each iteration.
+The tasks of the 1st iteration involved:
+\begin{itemize}
+\item Playing MP3 files located on the device.
+\subitem Stop/Pause functionality.
+\subitem Playing should continue when screen is turned off.
+\item Selected MP3 files to play based on beat per minute. 
+\subitem Replay previously played songs and skip a song and select a new.
+\end{itemize}
+
