--- a/Content/Iteration/introduction.tex
+++ b/Content/Iteration/introduction.tex
@@ -1,5 +1,3 @@
-Mention how this is part of \texttt{Essence} and not \texttt{eXtreme Programming}.
+Over the course of this project we been working in iterations of two weeks, which is approximately one week worth of work on the project. In this chapter we will cover the goals and findings of each iteration. Doing the project we had three releases each covering two iterations.
 
-Maybe even mention that this was made as part of SWI course mini project?
-
-This chapter should contain a time line with an overview of the iterations we have been through.
+\Kristian{should be expanded}
