--- a/Content/Iteration/iteration.tex
+++ b/Content/Iteration/iteration.tex
@@ -1,3 +1,7 @@
 \input{Content/Iteration/introduction}
 \input{Content/Iteration/1stIteration}
 \input{Content/Iteration/2ndIteration}
+\input{Content/Iteration/3rdIteration}
+\input{Content/Iteration/4thIteration}
+\input{Content/Iteration/5thIteration}
+\input{Content/Iteration/6thIteration}
