--- a/Content/SongScanner/implementation.tex
+++ b/Content/SongScanner/implementation.tex
@@ -1,4 +1,4 @@
-\section{Implementation} %todo no music player
+\section{Implementation}
 The Song Scanner is part of the \texttt{DataAccessLayer} module which consists of three classes \texttt{Song}, \texttt{SongDatabase} and \texttt{SongScanner}. \texttt{Song} hold information regarding songs. \texttt{SongDatabase} is an abstraction to our sqlite database. \texttt{SongScanner} is responsible for keeping the database and MP3 file in selected folders synchronised.
 
 \subsection{Song}
