added work done to iter

--- a/Content/Iteration/4thIteration.tex
+++ b/Content/Iteration/4thIteration.tex
@@ -1,5 +1,9 @@
 \section{4th Iteration}
-The 4th iteration is where the 2nd release where completed 
+The 4th iteration is where the 2nd release where completed.
+
+Step Counter \\
+Settings GUI/Activity
+
 
 \subsection{2nd Release}
 With the basic music plater application completed in the 2nd iteration we outlined the configuration for the 3rd and 4th iterations in the configuration table seen in \ref{table:config1} taken from \citet{essence:config}.
