fixed todo about XP practice references from Ivan

--- a/Content/Test/testReflection.tex
+++ b/Content/Test/testReflection.tex
@@ -12,4 +12,15 @@ We also found that even though unit tests enable regression testing to be perfor
 
 Even though the tests might take a while to write, we found that they were generally worth the time to write. The reason for this was that some of the time invested in writing them was regained later because the tests caught errors that we would otherwise have spent a lot of time debugging to find.
 
-\Ivan{Evt. kort ref til practices der er mest relaterede til test (refactor etc.) - Forklar evt lidt mere om de practices der har med test at gøre.}
+% % % % % % % % % % % % % % % % % % % %
+\Christoffer{should the stuff below be moved to methodology reflection?}
+
+Testing also helped enforced other XP practices than refactoring. Namely collective ownership, pair programming, and continuous integration. 
+
+The XP practice of collective ownership was enforced when we wrote tests, since there was less risk that a change made by someone in the group broke the system unnoticed, since the test would detect it. This gave group members courage to change code written by others and thus allowed a feeling of ownership of all the code. 
+
+Test also enforced the pair programming practice. It gave group members a common understanding of the task to be solved. This understanding was achieved by writing test cases together, before the actual implementation of the solution itself began.
+
+Likewise, continuous integration was enforced by testing. All test cases could quickly be run after a change was made, so as to be sure nothing had been broken.
+
+% % % % % % % % % % % % % % % % % % % %
