intro to methodology

--- a/Content/Methodology/introduction.tex
+++ b/Content/Methodology/introduction.tex
@@ -1,1 +1,1 @@
-\Dan{Write an introduction here.}
+In this chapter, the agile software development methodology, extreme programming is explained. Extreme programming is then compared to the  SCRUM. Extreme programming was used in this project and an explanation of how it was applied is also contained in this chapter. Lastly, the modifications made to extreme programming to fit this project are described.
