--- a/Content/MusicPlayer/methodologyObservations.tex
+++ b/Content/MusicPlayer/methodologyObservations.tex
@@ -1,4 +1,23 @@
-\section{Methodology Observations}
-This section should contain the observation about the XP methodology gathered during the development of the Music Player.
+\section{Methodology Observations}\label{sec:release1Methodology}
+Aside from developing the product, Tempo Player, a lot of energy was spent on considering how XP could be used to make the development process as efficient and controlled as possible. We had a clear goal to create high quality code while also keeping track of the development in a way that would allow us to estimate how long a given addition to the project would take, and decide if it is feasibly to include it in the project based on that estimation.
+\Dan{Should we mention this ``clear goal'' before? (We had a clear goal....)}
+In this and the following Methodology Observations sections, we will present some of the more interesting observations we made while working on each release. As stated in LABEL TO RELEVANT XP SECTION all the XP practices are important to gain as much as possible from XP, and all of them were considered (as apparent in the unedited meeting summaries in \Cref{chap:temp}), but three of them are especially interesting when it comes to reaching our goal: pair programming, planning, and refactoring.\\ \Dan{Find LABEL TO RELEVANT XP SECTION}
 
-i.e. When developing the music player we have trouble adhering to the \texttt{Simple Design} principle, which states ``Only develop what is need now'', because we know we will implement additional features later, which lead us to implement methods for future use.
+Initially, during the first few iterations, we had to take the first steps towards using XP. This did not only include reading Beck's book \Dan{Beck's book}, but also adapting and getting used to the XP practices.
+
+
+%The music player was the first module that was implemented, as this is the core functionality of the application, without which the rest of the features would lose their purpose. In this section we will describe the observations we made during The bulk of the music player was implemented during the first iteration, and this was also the period where XP was
+
+
+%Pair Programming
+% Laptops, teamviewer, ->external monitor, changing partners, trivial problems, solving difficult problems
+
+
+%Planning
+%Refactoring
+
+
+%\Dan{I skipped the non-main principles for now. Let us see if we should include them later.}
+%This section should contain the observation about the XP methodology gathered during the development of the Music Player.
+
+%i.e. When developing the music player we have trouble adhering to the \texttt{Simple Design} principle, which states ``Only develop what is need now'', because we know we will implement additional features later, which lead us to implement methods for future use.
