--- a/Content/SongScanner/methodologyObservations.tex
+++ b/Content/SongScanner/methodologyObservations.tex
@@ -1,4 +1,4 @@
-\section{Methodology Observations}
+\section{Methodology Observations}\label{sec:songScannerMethodology}
 This section should contain the observation about the XP methodology gathered during the development of the Music Player.
 
 i.e. When developing the music player we have trouble adhering to the \texttt{Simple Design} principle, which states ``Only develop what is need now'', because we know we will implement additional features later, which lead us to implement methods for future use.
