--- a/Content/StepCounter/methodologyObservations.tex
+++ b/Content/StepCounter/methodologyObservations.tex
@@ -1,3 +1,3 @@
-\section{Methodology Observations}
+\section{Methodology Observations}\label{sec:stepCounterMethodology}
 
 In the development of the step counter we 
