config stuff still oip

--- a/Content/Iteration/configurationTable2.tex
+++ b/Content/Iteration/configurationTable2.tex
@@ -1,3 +1,4 @@
+\definecolor{darkGreen}{rgb}{0,0.5,0}
 \begin{table}
 \begin{tabular}{l|l|l|l|l}
          & \textbf{Paradigm} & \textbf{Product} & \textbf{Project} & \textbf{Process} \\ \hline
@@ -5,7 +6,7 @@
 	& \parbox[t]{0.20\textwidth}{\small 
 		\textit{Reflection} \newline
 		Challenge: \newline
-		. \newline
+		\textbf{\color{darkGreen}Can we ease the interactions with a smartphone.} \newline
 		Use context: \newline
 		Running while listening to music from a smartphone.
 	}
@@ -30,7 +31,7 @@
 \parbox[t][5cm][c]{0.02\textwidth}{\rotatebox{90}{Overview}}
 	& \parbox[t]{0.20\textwidth}{\small 
     \textit{Stakeholders} \newline
-    Project group.
+    Runner.
 	}
 	& \parbox[t]{0.20\textwidth}{\small 
 		\textit{Design} \newline
