--- a/Content/Methodology/scrumComparison.tex
+++ b/Content/Methodology/scrumComparison.tex
@@ -9,7 +9,9 @@ E.g. Different philosophies about review, quality, etc.
 
 
 ...
-Where SCRUM only acts on a Team Practice and Process level, XP additionally acts on a Programming level.
+Where SCRUM only acts on a Team and Organizational level, XP additionally acts on a developer level.
+
+
 The 12 practices can be attributed to which level they act upon.
 Programming: Simple Design, Testing, Refactoring, Coding Standards.
 Team Practices: Collective ownership, Continuous Integration, Metaphor, Coding Standard, 40-hour week, pair programming, small releases.
