pair programing in reflection methodology

--- a/Content/ReflectionMethodology/reflectionPairProgramming.tex
+++ b/Content/ReflectionMethodology/reflectionPairProgramming.tex
@@ -1,1 +1,9 @@
 \section{Pair Programming}
+Initially, we used Teamviewer for pair programming instead of one shared physical monitor as XP prescribes. We found that this did not work as well as with a single monitor. The main problem was that it did not encourage frequent driver change. This meant that often one person coded and the other person was just looking at it. We experienced a learning curve adopting pair programming, and initially it was difficult for the observer to contribute with input and most work was done by the driver. The driver had to carry the work load.
+
+Another issue was that if the task being worked on was not well understood by the pair, two people ended up not advancing towards a solution. We addressed the issue by temporarily splitting the pair to perform research and experimentation, which could help reach a solution.
+
+We found that the forced timed pair programming switch did not sit right with us. Multiple times we experienced that we should switch just before the current issue was done. This created overhead and we sometimes forgot to change partners.
+We therefore decided to use a task-based approach where switches were only made between issues or between issues estimated to take more than 3 hours. We suspect that this may have hurt the collective ownership, but we found it more productive. We later abandoned the 3 hour switch.
+
+We attempted to reduce the overhead by solving trivial issues alone rather than in pairs. 
