--- a/Content/Methodology/scrumComparison.tex
+++ b/Content/Methodology/scrumComparison.tex
@@ -10,7 +10,7 @@ E.g. Different philosophies about review, quality, etc.
 
 ...
 Where SCRUM only acts on a Team and Organizational level, XP additionally acts on a developer level.
-
+\Alexander{Find sources. \newline XP Source = XP expanded}
 
 The 12 practices can be attributed to which level they act upon.
 Programming: Simple Design, Testing, Refactoring, Coding Standards.
