coding standards in reflection methodology

--- a/Content/ReflectionMethodology/reflectionRefactoring.tex
+++ b/Content/ReflectionMethodology/reflectionRefactoring.tex
@@ -1,1 +1,8 @@
 \section{Refactoring}
+During the project, we were not very good at refactoring existing code when adding new functionality. As a result, the quality of the code did not live up to our expectations. To solve this, we created a low priority refactoring task, which was estimated to a few hours each iteration. This turned out to be a bad approach since low-priority tasks were usually neglected. 
+
+In the group we agreed to remedy bad smells on sight. This, however, was not done because it would have taken a considerable amount of time to do. We further postponed refactoring, in favor of completing the second release faster. This did not help getting refactoring done.
+
+We created a refactoring plan in order to formalise the refactoring process. Bad smells were prioritised and the ones with highest priorities had to be fixed. This provided some concrete goals for what we wanted to achieve, with explicit refactoring tasks. There was a need to standardise the code structure, and spurred on the creation of our code standards. The refactoring tasks were time consuming but did improve the readability and maintainability of the code. New code written after the code standardisation was also of higher quality than the code prior to it. One of the reasons we had a hard time getting refactoring started, was likely the lack of code standards.
+
+We made the mistake of mixing the tasks of refactoring and stub removal, and this  increased the complexity and thus the time spent on the task. In hindsight, we believe the process would have been faster if they were done separately.
