--- a/Content/Methodology/XPexplained.tex
+++ b/Content/Methodology/XPexplained.tex
@@ -87,74 +87,27 @@ It is therefore up to them to fix it or discard their solution and try again.
 %Coherent
 It is evident that this practice requires the Testing practice to work.
 
-\subsection{Metaphor}
-%Why
-The goal of the Metaphor practice is to ensure all developers are on the same page and have the same vision as of what to develop.
-
-%How/What
-This is done by creating a metaphor for the system e.g. ``A pacer that plays music in the current tempo”.
-
-%Coherent
-
-
-\subsection{On-site Customer}
-%Why
-Huge amounts of time go into analysing the problem domain, without any certainty of it being correct or still applicable throughout the development process.
-The On-site Customer practice is implemented to counter this time consuming problem.
-
-%How/What
-This is done by making the customer sit in on the actual team.
-Here the customer will have to answer questions from the developers and prioritise important features from his point-of-view.
-
-%Coherent
-
-
-\subsection{Pair Programming}
-%Why
-Pair Programming is maybe the most controversial practice in Extreme Programming.
-When it works it generates high quality code, but when it doesn't it is counterproductive.
-
-%How/What
-Pair Programming works with two developers sitting at the same computer.
-Here they work together on the same code.
-One codes while the other thinks ahead and abstract.
-
-
-%Coherent
-This practice requires a lot of the developers as human beings.
-However, when it works it contributes to the Collective Ownership and Simple Design practices as well as general code quality.
-
-\subsection{Planning Game}
-%Why
-The Planning Game practice is an attempt make the development schedule a collaboration between customer and developer.
-
-
-%How/What
-The Planning Game uses story cards, which are written by the customer.
-The story cards describe what the system needs to do and the purpose of the story.
-When a story card is written, the developers will estimate its time to implement.
-When the stories are estimated, the customer is tasked to decide in which order the stories should be implemented.\\
-
-%Coherent
-By planning this way, it enforces the Small Releases practice.
-
-\subsection{Refactoring}
-%Why
-One of Extreme Programmings core ideals is to \texttt{be brave}.
-This means one should not be afraid to refactor working code, if it is to improve the quality of the code.
-
-%How/What
-When a developer discovers a method to improve, he does so.
-When the refactoring is done, the tests are run and if all pass, the changes are committed to the project.
-
-%Coherent
-
 
 \Alexander{Spørgsmål til Ivan: Hvilken struktur er bedst, den lange eller den korte?}
 
+\paragraph{Metaphor} is used as a shared vision for the project.
+The metaphor is used to standardise the names of variables, methods, and classes. 
+This standardisation should help to intuitively understand the purpose of the variable, method, or class.
+
+\paragraph{On-site Customer} are a integral role in a XP project.
+The on-site customer is responsible for making decisions about priorities and requirements, as well as answering questions.
+
+\paragraph{Pair Programming} is the way to code in a XP project.
+It is when two developers work together on the same computer.
+While one writes the code, the other analyses and comes with suggestions for improvement.
+The development should be seen as a dialogue between the two developers.
+
+\paragraph{Planning Game} is the event where the customer writes user stories, after which, the developers estimates them according to cost.
+
+\paragraph{Refactoring} is the practice used to eradicate bad smells in the code, such as duplicate code.
 
 
-\paragraph{Simple Design} is the practice that defines the best design as the easiest that work.
+\paragraph{Simple Design} is the best design, and is defined as the easiest that work.
 For it to work, it must pass all unit tests and acceptance tests.
 Further the best design should be so simple it never has any duplicate code.
 
@@ -165,4 +118,4 @@ These releases does incrementally complete the system.
 \paragraph{Testing} is a mindset, in which, unit tests are developed before the code (Test-First Development).
 Testing also refers to how the stories and releases are not complete before they pass their respective tests.
 
-
+%http://www.techrepublic.com/article/extreme-programming-do-these-12-practices-make-perfect/
